--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "webpack": "^4.44.1"
   },
   "dependencies": {
-    "@wordpress/base-styles": "^2.1.0",
-    "@wordpress/block-editor": "^4.4.0",
-    "@wordpress/block-library": "^2.23.0",
-    "@wordpress/blocks": "^6.21.0",
-    "@wordpress/components": "^10.1.0",
-    "@wordpress/core-data": "^2.21.0",
-    "@wordpress/data": "^4.23.0",
-    "@wordpress/dom-ready": "^2.10.0",
-    "@wordpress/editor": "^9.21.0",
-    "@wordpress/element": "^2.17.0",
-    "@wordpress/format-library": "^1.23.0",
-    "@wordpress/i18n": "^3.15.0",
-    "@wordpress/interface": "^0.8.0",
-    "@wordpress/media-utils": "^1.16.0"
+    "@wordpress/base-styles": "^3.3.0",
+    "@wordpress/block-editor": "^5.1.4",
+    "@wordpress/block-library": "^2.26.5",
+    "@wordpress/blocks": "^6.24.2",
+    "@wordpress/components": "^11.1.2",
+    "@wordpress/core-data": "^2.24.2",
+    "@wordpress/data": "^4.25.0",
+    "@wordpress/dom-ready": "^2.11.0",
+    "@wordpress/editor": "^9.24.4",
+    "@wordpress/element": "^2.18.0",
+    "@wordpress/format-library": "^1.25.4",
+    "@wordpress/i18n": "^3.16.0",
+    "@wordpress/interface": "^0.10.5",
+    "@wordpress/media-utils": "^1.18.0",
+    "@wordpress/reusable-blocks": "^1.0.4"
   }
 }
